# fatalfrequencies

./: .gitignore  .gitmodules  README.md  pyproject.toml
ff/: __init__.py  queries.py  render_prolog.py
ff/json/: antagonist_reactions.json  challenges.json  characters.json  clues.json  edges.json  general_abilities.json  investigative_abilities.json  items.json  player_character.json  problems.json  scenes.json  sources.json
ff/prolog/: converter.py  database.prolog
ff/static/: style.css
ff/templates/: __init__.py  collection.html  current.html  edges.html  game.html  gm.html  home.html  join.html  player.html  scenes.html  template.html
